Implement update speed with curve
Original version

--- a/BezierCurve/BezierCurve.vcxproj.filters
+++ b/BezierCurve/BezierCurve.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClInclude Include="BezierPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SpeedCurveCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SpeedData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SpeedDataItem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BezierCurve.cpp">
@@ -60,6 +69,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BezierPoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SpeedCurveCtrl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SpeedData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SpeedDataItem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
