--- a/BezierCurve/BezierCurve.vcxproj
+++ b/BezierCurve/BezierCurve.vcxproj
@@ -192,6 +192,9 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SpeedCurveCtrl.h" />
+    <ClInclude Include="SpeedData.h" />
+    <ClInclude Include="SpeedDataItem.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -206,6 +209,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SpeedCurveCtrl.cpp" />
+    <ClCompile Include="SpeedData.cpp" />
+    <ClCompile Include="SpeedDataItem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="BezierCurve.rc" />
