--- a/BezierCurve/BezierCurve.vcxproj
+++ b/BezierCurve/BezierCurve.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SpecializedSink.h" />
     <ClInclude Include="SpeedCurveCtrl.h" />
     <ClInclude Include="SpeedData.h" />
     <ClInclude Include="SpeedDataItem.h" />
@@ -209,6 +210,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SpecializedSink.cpp" />
     <ClCompile Include="SpeedCurveCtrl.cpp" />
     <ClCompile Include="SpeedData.cpp" />
     <ClCompile Include="SpeedDataItem.cpp" />
