--- a/BezierCurve/BezierCurve.vcxproj.filters
+++ b/BezierCurve/BezierCurve.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="SpeedDataItem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SpecializedSink.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BezierCurve.cpp">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SpeedDataItem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SpecializedSink.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
